# $Id$

2007-09-06	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: arrayMergeUnique() renamed to
	mergeUnqie() + variable argument lists are acepted now.

2007-09-04	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: arrayMergeUnique() added.

	* main/Markup/Html/: minor stuff for coming parser.

2007-09-02	Konstantin V. Arkhipov

	* core/DB/DBPool.class.php: dropLink() now throws MissingElement
	instead of WrongArgument exception.

2007-08-29	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php: safeAmp() helps to avoid double
	encoding of html entities.

2007-08-27	Denis M. Gabaidulin

	* main/Flow/DebugPhpView.class.php: simple, but useful debug view.

2007-08-22	Anton E. Lebedevich

	* main/Flow/RedirectView.class.php: static create() added.

2007-08-20	Vladimir A. Altuchov

	* core/DB/DBPool.class.php: dropLink() added.

2007-08-17	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: hex2Binary() added.

	* main/Flow/HttpRequest.class.php: setGetVar() and setPostVar() added.

2007-08-15	Denis M. Gabaidulin

	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator filter
	was added. Bases on new HttpUrl parser.

2007-08-15	Anton E. Lebedevich

	*  main/Utils/Http/CurlHttpClient.class.php,
	main/Utils/Http/CurlHttpResponse.class.php: setMaxFileSize() added to
	limit download size.

2007-08-13	Vladimir A. Altuchov

	* core/Form/Primitives/PrimitiveTime.class.php: correct import
	condition.

	* test/core/PrimitiveTimeTest.class.php: test case for primitive time.

2007-08-13	Anton E. Lebedevich
	
	* main/Net/GenericUri.class.php, main/Net/HttpUrl.class.php,
	main/Utils/TextUtils.class.php: url normalization moved from TextUtils
	to GenericUri and HttpUrl.

2007-08-13	Dmitry E. Demidov

	* main/Utils/RussianTextUtils.class.php: getDayOfWeek now can return
	full day of week name.

2007-08-10	Dmitry A. Lomash

	* core/Base/Date.class.php: toIsoString() convertes it according to
	ISO-8601 standard.

2007-08-09	Anton E. Lebedevich
