@@ -1,0 +1,35 @@
+<?php
+/***************************************************************************
+ *   Copyright (C) 2007 by Konstantin V. Arkhipov                          *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU Lesser General Public License as        *
+ *   published by the Free Software Foundation; either version 3 of the    *
+ *   License, or (at your option) any later version.                       *
+ *                                                                         *
+ ***************************************************************************/
+/* $Id$ */
+
+	/**
+	 * @ingroup Projections
+	**/
+	final class MappableObjectProjection implements ObjectProjection
+	{
+		private $mappable = null;
+		
+		public function __construct(MappableObject $mappable)
+		{
+			$this->mappable = $mappable;
+		}
+		
+		/**
+		 * @return JoinCapableQuery
+		**/
+		public function process(Criteria $criteria, JoinCapableQuery $query)
+		{
+			return $query->get(
+				$this->mappable->toMapped($criteria->getDao(), $query)
+			);
+		}
+	}
+?>
